libs/gst/base/gstqueuearray.h
@@ -83,6 +83,8 @@ GST_EXPORT
 gboolean        gst_queue_array_drop_struct      (GstQueueArray * array,
                                                   guint           idx,
                                                   gpointer        p_struct);
+GST_EXPORT
+gpointer        gst_queue_array_peek_tail_struct (GstQueueArray * array);
 
 G_END_DECLS
 
